--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "npx json-server --watch -p 5555 db.json",
+    "dev": "npx json-server --watch -p https://restaurant-menu-f556e5.netlify.app/db.json db.json",
 
     "lint": "vue-cli-service lint"
   },
